--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,8 @@ flutter:
     # To add assets to your application, add an assets section, like this:
   assets:
     - lib/i18n/
+    - assets/snd_go.mp3
+    - assets/snd_stop.mp3
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
